--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
     <br>       
         <p><strong>Bank Details:</strong></p>
         <p>Name:Pradeep Sharma </p>
-        <p>Bank Name: Oriental Bank of Commerce </p>
-        <p>Branch: Versova, Andheri West</p>
-        <p>IFSC code: ORBC0101064 </p>
+        <p>Bank Name: PUNJAB NATIONAL BANK </p>
+        <p>Branch: Andheri West</p>
+        <p>IFSC code: PUNB0106410 </p>
         <p>Account Number: 10642011003600 </p>
 
       </div>
