Fixes to hide print button

--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
   <script>
 
 $( "#print" ).click(function() {
-   window.print();
+  $("#print").hide(); 
+  window.print();
+   
 });
 
   </script>
