--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
     <script type="text/javascript" src="js/jquery-1.3.2.min.js"></script>
     <script type="text/javascript" src="js/example.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    
+    <style>
+      @media print {
+  .noPrint{
+    display:none;
+  }
+}
+    </style>
   </head>
 
   <body>
+
     <div id="page-wrap">
       <textarea id="header">INVOICE</textarea>
 
@@ -163,14 +170,13 @@
       </div>
     </div>
 
-
-   <button id="print" style="color:blue;position:absolute; top:60%;right:5%;">Print</button>
+   <button id="print" style="color:blue;position:absolute; top:60%;right:5%;" class="noPrint">Print</button>
   </body>
 
   <script>
 
 $( "#print" ).click(function() {
-  $("#print").hide(); 
+ // $("#print").hide(); 
   window.print();
    
 });
